library/common/include/virgil/crypto/common/vsc_str_buffer.h

    typedef struct vsc_str_buffer_t vsc_str_buffer_t;
//
//  Copy given class context by increasing reference counter.
//
VSC_PUBLIC vsc_str_buffer_t *
vsc_str_buffer_shallow_copy(vsc_str_buffer_t *self);
//
//  Append char to the string buffer and reallocate if needed by coping.
//
//  Precondition: string buffer should be an owner of the underlying characters array.
//
//  Note, this operation can be slow if copy operation occurred.
//  Note, string buffer capacity is doubled.
//
VSC_PUBLIC void
vsc_str_buffer_append_char(vsc_str_buffer_t *self, char ch);
//
//  Copy string to the string buffer and reallocate if needed by coping.
//
//  Precondition: string buffer should be an owner of the underlying characters array.
//
//  Note, this operation can be slow if copy operation occurred.
//  Note, string buffer capacity is doubled.
//
VSC_PUBLIC void
vsc_str_buffer_append_str(vsc_str_buffer_t *self, vsc_str_t str);
//
//  Write a null-termination character without increasing length.
//
//  Precondition: "unused len" must be at least 1.
//
VSC_PUBLIC void
vsc_str_buffer_make_null_terminated(vsc_str_buffer_t *self);
//
//  Replace all occurences of one character to another character.
//
VSC_PUBLIC void
vsc_str_buffer_replace_char(vsc_str_buffer_t *self, char char_old, char char_new);
//
//  Remove all occurences of given character from the string end.
//
VSC_PUBLIC void
vsc_str_buffer_rtrim(vsc_str_buffer_t *self, char char_to_trim);
//
//  Reset to the initial state.
//  After reset underlying characters array can be re-used.
//
VSC_PUBLIC void
vsc_str_buffer_reset(vsc_str_buffer_t *self);
//
//  Zeroing output buffer in secure manner.
//  And reset it to the initial state.
//
VSC_PUBLIC void
vsc_str_buffer_erase(vsc_str_buffer_t *self);