wrappers/python/virgil_crypto_lib/common/_c_bridge/_vsc_str_buffer.py


        Precondition: string buffer should be an owner of the underlying characters array.

        Note, this operation can be slow if copy operation occurred.
        Note, string buffer capacity is doubled."""
        vsc_str_buffer_append_char = self._lib.vsc_str_buffer_append_char
        vsc_str_buffer_append_char.argtypes = [POINTER(vsc_str_buffer_t), c_char]
        vsc_str_buffer_append_char.restype = None
        return vsc_str_buffer_append_char(ctx, ch)

    def vsc_str_buffer_append_str(self, ctx, str):
        """Copy string to the string buffer and reallocate if needed by coping.

        Precondition: string buffer should be an owner of the underlying characters array.

        Note, this operation can be slow if copy operation occurred.
        Note, string buffer capacity is doubled."""
        vsc_str_buffer_append_str = self._lib.vsc_str_buffer_append_str
        vsc_str_buffer_append_str.argtypes = [POINTER(vsc_str_buffer_t), vsc_str_t]
        vsc_str_buffer_append_str.restype = None
        return vsc_str_buffer_append_str(ctx, str)

    def vsc_str_buffer_make_null_terminated(self, ctx):
        """Write a null-termination character without increasing length.

        Precondition: "unused len" must be at least 1."""
        vsc_str_buffer_make_null_terminated = self._lib.vsc_str_buffer_make_null_terminated
        vsc_str_buffer_make_null_terminated.argtypes = [POINTER(vsc_str_buffer_t)]
        vsc_str_buffer_make_null_terminated.restype = None
        return vsc_str_buffer_make_null_terminated(ctx)

    def vsc_str_buffer_replace_char(self, ctx, char_old, char_new):
        """Replace all occurrences of one character to another character."""
        vsc_str_buffer_replace_char = self._lib.vsc_str_buffer_replace_char
        vsc_str_buffer_replace_char.argtypes = [POINTER(vsc_str_buffer_t), c_char, c_char]
        vsc_str_buffer_replace_char.restype = None
        return vsc_str_buffer_replace_char(ctx, char_old, char_new)

    def vsc_str_buffer_rtrim(self, ctx, char_to_trim):
        """Remove all occurrences of given character from the string end."""
        vsc_str_buffer_rtrim = self._lib.vsc_str_buffer_rtrim
        vsc_str_buffer_rtrim.argtypes = [POINTER(vsc_str_buffer_t), c_char]
        vsc_str_buffer_rtrim.restype = None
        return vsc_str_buffer_rtrim(ctx, char_to_trim)

    def vsc_str_buffer_reset_with_capacity(self, ctx, min_capacity):
        """Reset strung buffer and increase capacity if given value less then current."""
        vsc_str_buffer_reset_with_capacity = self._lib.vsc_str_buffer_reset_with_capacity
        vsc_str_buffer_reset_with_capacity.argtypes = [POINTER(vsc_str_buffer_t), c_size_t]
        vsc_str_buffer_reset_with_capacity.restype = None
        return vsc_str_buffer_reset_with_capacity(ctx, min_capacity)

    def vsc_str_buffer_reset(self, ctx):
        """Reset to the initial state.
        After reset underlying characters array can be re-used."""
        vsc_str_buffer_reset = self._lib.vsc_str_buffer_reset
        vsc_str_buffer_reset.argtypes = [POINTER(vsc_str_buffer_t)]
        vsc_str_buffer_reset.restype = None
        return vsc_str_buffer_reset(ctx)

    def vsc_str_buffer_erase(self, ctx):
        """Zeroing output buffer in secure manner.
        And reset it to the initial state."""
        vsc_str_buffer_erase = self._lib.vsc_str_buffer_erase
        vsc_str_buffer_erase.argtypes = [POINTER(vsc_str_buffer_t)]
        vsc_str_buffer_erase.restype = None
        return vsc_str_buffer_erase(ctx)

    def vsc_str_buffer_shallow_copy(self, ctx):
        vsc_str_buffer_shallow_copy = self._lib.vsc_str_buffer_shallow_copy
        vsc_str_buffer_shallow_copy.argtypes = [POINTER(vsc_str_buffer_t)]
        vsc_str_buffer_shallow_copy.restype = POINTER(vsc_str_buffer_t)
        return vsc_str_buffer_shallow_copy(ctx)
